--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# ---- Streamlit ----
+# Never commit API keys or sensitive configuration
+.streamlit/secrets.toml
+
